--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>Crystals Collector!</h1>
+        <div class="container-fluid">
+            <div class="row mb-3">
+                <div class="col-auto">
+                    <h1 class="mt-3 py-4 px-1 bg-orange text-white">Crystals Collector!</h1>
                 </div>
             </div>
         </div>
@@ -27,11 +27,11 @@
     <main>
         <div class="container-fluid">
             <!-- Instructions -->
-            <div class="row">
-                <div class="col">
-                    <p>You will be given a random number at the start of the game.</p>
+            <div class="row mb-3">
+                <div class="col-11 col-sm-6 ml-3 pb-5 bg-tan text-success font-weight-bold">
+                    <p class="mt-4">You will be given a random number at the start of the game.</p>
                     <br>
-                    <p>There ae four crystals below. By clicking on a crystall you will add a specific amount of points
+                    <p>There ae four crystals below. By clicking on a crystal you will add a specific amount of points
                         to your total score.</p>
                     <br>
                     <p>You win the game by matching your total score to the random number, you lose the game if your
@@ -39,46 +39,50 @@
                     <br>
                     <p>The value of each crystal is hidden from you untill you click on it.</p>
                     <br>
-                    <p>Each time when the game starts, the game will change the values of each crystal.</p>
+                    <p class="pb-5">Each time when the game starts, the game will change the values of each crystal.</p>
                 </div>
             </div>
 
             <!-- Score & Win/Losses Display -->
-            <div class="row">
-                <div class="col">
-                    <h1 id="scoreGoal"></h1>
+            <div class="row mb-3">
+                <div class="col-3 px-2 pt-2 pb-5 ml-3 bg-success">
+                    <h1 id="scoreGoal">33</h1>
                 </div>
-                <div class="col">
-                    <h3 id="wins"></h3>
-                    <h3 id="losses"></h3>
+                <div class="col-auto px-1 pb-1 ml-3 bg-aqua font-weight-bold">
+                    <br>
+                    <p id="status">You win!</p>
+                    <br>
+                    <p id="wins">Wins: 1</p>
+                    <br>
+                    <p id="losses">Losses: 0</p>
                 </div>
             </div>
 
             <!-- Crystals -->
-            <div class="row">
-                <div class="col" id="crystal1">
+            <div class="row crystals mb-2">
+                <div class="col-1 ml-3">
                     <img src="" alt="crystal 1">
                 </div>
-                <div class="col" id="crystal2">
+                <div class="col-1">
                     <img src="" alt="crystal 2">
                 </div>
-                <div class="col" id="crystal3">
+                <div class="col-1">
                     <img src="" alt="crystal 3">
                 </div>
-                <div class="col" id="crystal4">
+                <div class="col-1">
                     <img src="" alt="crystal 4">
                 </div>
             </div>
 
             <!-- Current Score -->
-            <div class="row">
-                <div class="col">
+            <div class="row mb-2">
+                <div class="col-3 ml-3 px-2 py-1 bg-teal text-white">
                     <p>Your total score is: </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <h1 id="scoreCurrent"></h1>
+                <div class="col-3 ml-3 px-2 pt-1 pb-5 bg-teal text-white">
+                    <h1 id="scoreCurrent">0</h1>
                 </div>
             </div>
 
