--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CrystalsCollector</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- My CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
+
     <!-- Header -->
     <header>
         <div class="container-fluid">
@@ -23,15 +25,16 @@
             </div>
         </div>
     </header>
-
-    <main>
-        <div class="container-fluid">
+    
+    <div class="main-container container-fluid d-flex">
+        <main>
             <!-- Instructions -->
             <div class="row mb-3">
-                <div class="col-11 col-sm-6 ml-3 pb-5 bg-tan text-success font-weight-bold">
+                <div class="ml-3 pb-5 bg-tan text-success font-weight-bold">
                     <p class="mt-4">You will be given a random number at the start of the game.</p>
                     <br>
-                    <p>There ae four crystals below. By clicking on a crystal you will add a specific amount of points
+                    <p>There ae four crystals below. By clicking on a crystal you will add a specific amount of
+                        points
                         to your total score.</p>
                     <br>
                     <p>You win the game by matching your total score to the random number, you lose the game if your
@@ -39,7 +42,8 @@
                     <br>
                     <p>The value of each crystal is hidden from you untill you click on it.</p>
                     <br>
-                    <p class="pb-5">Each time when the game starts, the game will change the values of each crystal.</p>
+                    <p class="pb-5">Each time when the game starts, the game will change the values of each crystal.
+                    </p>
                 </div>
             </div>
 
@@ -86,8 +90,9 @@
                 </div>
             </div>
 
-        </div>
-    </main>
+        </main>
+    </div>
+
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
