--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <main>
             <!-- Instructions -->
             <div class="row mb-3">
-                <div class="ml-3 pb-5 bg-tan text-success font-weight-bold">
-                    <p class="mt-4">You will be given a random number at the start of the game.</p>
+                <div class="col-11 col-sm-6 ml-3 pb-5 bg-tan text-success font-weight-bold">
+                    <p class="mt-3">You will be given a random number at the start of the game.</p>
                     <br>
                     <p>There ae four crystals below. By clicking on a crystal you will add a specific amount of
                         points
@@ -42,7 +42,7 @@
                     <br>
                     <p>The value of each crystal is hidden from you untill you click on it.</p>
                     <br>
-                    <p class="pb-5">Each time when the game starts, the game will change the values of each crystal.
+                    <p class="pb-3">Each time when the game starts, the game will change the values of each crystal.
                     </p>
                 </div>
             </div>
@@ -64,17 +64,17 @@
 
             <!-- Crystals -->
             <div class="row crystals mb-2">
-                <div class="col-1 ml-3">
-                    <img src="" alt="crystal 1">
+                <div class="col-3 col-sm-2 col-xl-1">
+                    <img src="./assets/images/blue.PNG" alt="crystal 1">
                 </div>
-                <div class="col-1">
-                    <img src="" alt="crystal 2">
+                <div class=" col-3 col-sm-2 col-xl-1">
+                    <img src="./assets/images/green.PNG" alt="crystal 2">
                 </div>
-                <div class="col-1">
-                    <img src="" alt="crystal 3">
+                <div class="col-3 col-sm-2 col-xl-1">
+                    <img src="./assets/images/red.PNG" alt="crystal 3">
                 </div>
-                <div class="col-1">
-                    <img src="" alt="crystal 4">
+                <div class="col-3 col-sm-2 col-xl-1">
+                    <img src="./assets/images/purple.PNG" alt="crystal 4">
                 </div>
             </div>
 
