added game logic

--- a/index.html
+++ b/index.html
@@ -50,31 +50,31 @@
             <!-- Score & Win/Losses Display -->
             <div class="row mb-3">
                 <div class="col-3 px-2 pt-2 pb-5 ml-3 bg-success">
-                    <h1 id="scoreGoal">33</h1>
+                    <h1 id="scoreGoal"></h1>
                 </div>
                 <div class="col-auto px-1 pb-1 ml-3 bg-aqua font-weight-bold">
                     <br>
-                    <p id="status">You win!</p>
+                    <p id="status"></p>
                     <br>
-                    <p id="wins">Wins: 1</p>
+                    <p id="wins"></p>
                     <br>
-                    <p id="losses">Losses: 0</p>
+                    <p id="losses"></p>
                 </div>
             </div>
 
             <!-- Crystals -->
-            <div class="row crystals mb-2">
+            <div class="row mb-2">
                 <div class="col-3 col-sm-2 col-xl-1">
-                    <img src="./assets/images/blue.PNG" alt="crystal 1">
+                    <img src="./assets/images/blue.PNG" alt="crystal blue" class="crystals" id="crystalBlue">
                 </div>
                 <div class=" col-3 col-sm-2 col-xl-1">
-                    <img src="./assets/images/green.PNG" alt="crystal 2">
+                    <img src="./assets/images/green.PNG" alt="crystal green" class="crystals" id="crystalGreen">
                 </div>
                 <div class="col-3 col-sm-2 col-xl-1">
-                    <img src="./assets/images/red.PNG" alt="crystal 3">
+                    <img src="./assets/images/red.PNG" alt="crystal red" class="crystals" id="crystalRed">
                 </div>
                 <div class="col-3 col-sm-2 col-xl-1">
-                    <img src="./assets/images/purple.PNG" alt="crystal 4">
+                    <img src="./assets/images/purple.PNG" alt="crystal purple" class="crystals" id="crystalPurple">
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
             </div>
             <div class="row">
                 <div class="col-3 ml-3 px-2 pt-1 pb-5 bg-teal text-white">
-                    <h1 id="scoreCurrent">0</h1>
+                    <h1 id="scoreCurrent"></h1>
                 </div>
             </div>
 
